--- a/package.json
+++ b/package.json
@@ -2,47 +2,54 @@
   "name": "open-resume",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "test": "jest --watch",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "type-check": "tsc --noEmit",
+    "clean": "rm -rf .next node_modules/.cache"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.18",
-    "@react-pdf/renderer": "^3.1.10",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
-    "@vercel/analytics": "^1.0.1",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
-    "next": "^16.0.1",
-    "pdfjs": "^2.5.0",
+    "@heroicons/react": "^2.2.0",
+    "@react-pdf/renderer": "^4.2.0",
+    "@reduxjs/toolkit": "^2.5.0",
+    "@vercel/analytics": "^1.4.1",
+    "autoprefixer": "^10.4.20",
+    "next": "^15.1.3",
     "pdfjs-dist": "^5.4.394",
-    "postcss": "^8.5.6",
-    "react": "18.2.0",
+    "postcss": "^8.4.49",
+    "react": "^18.3.1",
     "react-contenteditable": "^3.3.7",
-    "react-dom": "18.2.0",
-    "react-frame-component": "^5.2.6",
-    "react-icons": "^4.10.1",
-    "react-redux": "^8.0.7",
-    "tailwind-scrollbar": "^3.0.4",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "react-dom": "^18.3.1",
+    "react-frame-component": "^5.2.7",
+    "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.19",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "prettier-plugin-tailwindcss": "^0.2.1"
+    "@tailwindcss/typography": "^0.5.16",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@types/node": "^22.10.2",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "typescript": "^5.7.2"
   }
 }
